tests/negative/trait_not_impl.sans
// expect-error: trait
trait Foo { fn bar(self) Int }
struct S { x Int }
main() I {
  s = S { x: 1 }
  d = s as dyn Foo
  d.bar()
}
